fix visibility again

--- a/paths/static/assets/styles/signup.css
+++ b/paths/static/assets/styles/signup.css
@@ -230,7 +230,7 @@ button {
     #signupCard .title {
         display: none;
     }
-    #content a[href="./signup"] {
+    #content a[href="./signin"] {
         display: none;
     }
 }
